Move the layout around

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>ETH Burn</title>
     <style>
+      html, body, #root {
+        height: 100%;
+        margin: 0;
+      }
       #raw-loader {
         position: fixed;
         top: 0;
