--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       html, body, #root {
         height: 100%;
         margin: 0;
+        overflow: hidden;
       }
       #raw-loader {
         position: fixed;
