Add Card Layout

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>ETH Burn</title>
     <style>
-      html, body, #root {
+      html,
+      body,
+      #root {
         height: 100%;
         margin: 0;
         overflow: hidden;
@@ -30,6 +32,24 @@
         visibility: hidden;
         margin-top: 0.5rem;
         height: 24px;
+      }
+      ::-webkit-scrollbar {
+        width: 8px;
+        height: 8px;
+      }
+      ::-webkit-scrollbar {
+        width: 8px;
+        height: 8px;
+      }
+      ::-webkit-scrollbar-corner {
+        background: none;
+      }
+      ::-webkit-scrollbar-thumb {
+        border-radius: 4px;
+        background: #858585;
+      }
+      ::-webkit-scrollbar-track {
+        opacity: 0;
       }
     </style>
   </head>
