--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
         height: 100%;
         margin: 0;
         overflow: hidden;
+        background-color: #333;
+        color: white;
       }
       #raw-loader {
         position: fixed;
