Fix missing logo on leader

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#333" />
+    <meta name="description" content="Watch Ethereum burn ETH in real-time, per block, as an ultra-sound money, creating a sense of deflation. Due to the new protocol changes, EIP-1559." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>ETH Burn: Watch Ethereum Burn</title>
+    <title>Watch Ethereum Burn: EIP-1559</title>
     <style>
       html,
       body,
@@ -59,7 +60,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
       <div id="raw-loader">
-        <img src="logo_64.png" />
+        <img src="/logo_64.png" />
         <div id="raw-text">loading...</div>
       </div>
     </div>
