--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Watch Ethereum burn ETH in real-time, per block, as an ultra-sound money, creating a sense of deflation. Due to the new protocol changes, EIP-1559." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Watch Ethereum Burn: EIP-1559</title>
+    <title>Watch The Burn: EIP-1559 Real-Time Visualization</title>
     <style>
       html,
       body,
