improve button ux for chart

--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,9 @@
       ::-webkit-scrollbar-track {
         opacity: 0;
       }
+      *:focus {
+        box-shadow: none !important;
+      }
     </style>
   </head>
   <body>
