Add our first server sponsor! https://indexed.finance

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#333" />
+    <meta name="coinzilla" content="920f45ad0d38211bf8d422e271a20d5a" />
     <meta name="description" content="Watch Ethereum burn ETH in real-time, per block, as an ultra-sound money, creating a sense of deflation. Due to the new protocol changes, EIP-1559." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
