--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,71 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#333" />
-    <meta name="coinzilla" content="920f45ad0d38211bf8d422e271a20d5a" />
-    <meta name="description" content="Watch Ethereum burn ETH in real-time, per block, as an ultra-sound money, creating a sense of deflation. Due to the new protocol changes, EIP-1559." />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Watch The Burn: EIP-1559 Real-Time Visualization</title>
-    <style>
-      html,
-      body,
-      #root {
-        height: 100%;
-        margin: 0;
-        background-color: #333;
-        color: white;
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#333" />
+  <meta name="coinzilla" content="920f45ad0d38211bf8d422e271a20d5a" />
+  <meta name="description"
+    content="Watch Ethereum burn ETH in real-time, per block, as an ultra-sound money, creating a sense of deflation. Due to the new protocol changes, EIP-1559." />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>Watch The Burn: EIP-1559 Real-Time Visualization</title>
+  <style>
+    :root {
+      --orange: rgb(255, 106, 0);
+      --red: rgb(255, 34, 0);
+      --yellow: rgb(255, 200, 0);
+      --blue: rgb(0, 55, 255);
+    }
+
+    html,
+    body,
+    #root {
+      height: 100%;
+      margin: 0;
+      background-color: #333;
+      color: white;
+    }
+
+    #raw-loader {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-family: sans-serif;
+    }
+
+    #raw-text {
+      visibility: hidden;
+      margin-top: 40px;
+      height: 24px;
+    }
+
+    .firepit {
+      position: relative;
+      font-size: 100px;
+    }
+
+    .firepit-fire {
+      position: relative;
+      bottom: 0;
+      width: 1em;
+      height: 1em;
+    }
+
+    .firepit-flame {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      opacity: .9;
+      width: 1em;
+      height: 1em;
+      border-bottom-right-radius: 0.7em;
+      border-bottom-left-radius: 0.7em;
+      border-top-left-radius: 0.7em;
+      transform: rotate(-45deg) skew(-10deg, -10deg);
+      background-color: var(--red);
+      background-image: linear-gradient(to top right, fade-out(var(--red), .1), fade-out(var(--orange), .3));
+      z-index: 1;
+    }
+
+    .firepit-animate .firepit-flame {
+      animation-iteration-count: infinite;
+      animation-fill-mode: forwards;
+      animation-name: burn-left;
+      animation-duration: 300ms;
+    }
+
+    .firepit-animate .firepit-flame:nth-of-type(2n) {
+      animation-name: burn-right;
+      animation-duration: 400ms;
+    }
+
+    .firepit-flame:nth-of-type(2) {
+      height: 0.8em;
+      width: 0.8em;
+      left: 0.1em;
+      background-color: var(--orange);
+      background-image: linear-gradient(to top right, rgba(var(--orange), .9), rgba(var(--yellow), .9));
+      z-index: 2;
+    }
+
+    .firepit-flame:nth-of-type(3) {
+      height: 0.5em;
+      width: 0.5em;
+      left: 0.25em;
+      background-image: linear-gradient(to top right, var(--yellow), white);
+      z-index: 3;
+    }
+
+    .firepit-flame:nth-of-type(4) {
+      height: 0.3em;
+      width: 0.3em;
+      left: 0.35em;
+      background-color: white;
+      background-image: linear-gradient(to top right, rgba(white, .7), rgba(var(--blue), .1));
+      opacity: 1;
+      z-index: 4;
+    }
+
+    @keyframes burn-left {
+
+      0%,
+      100% {
+        transform: rotate(-45deg) skew(-10deg, -10deg) scale(1);
       }
-      #raw-loader {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-family: sans-serif;
+
+      30%,
+      60% {
+        transform: rotate(-44deg) skew(-12deg, -12deg) scale(1.01);
       }
-      #raw-text {
-        visibility: hidden;
-        margin-top: 0.5rem;
-        height: 24px;
+    }
+
+    @keyframes burn-right {
+
+      0%,
+      100% {
+        transform: rotate(-45deg) skew(-10deg, -10deg) scale(1);
       }
-      ::-webkit-scrollbar {
-        width: 8px;
-        height: 8px;
+
+      30%,
+      60% {
+        transform: rotate(-46deg) skew(-6deg, -6deg) scale(1.01);
       }
-      ::-webkit-scrollbar {
-        width: 8px;
-        height: 8px;
-      }
-      ::-webkit-scrollbar-corner {
-        background: none;
-      }
-      ::-webkit-scrollbar-thumb {
-        border-radius: 4px;
-        background: #858585;
-      }
-      ::-webkit-scrollbar-track {
-        opacity: 0;
-      }
-      *:focus {
-        box-shadow: none !important;
-      }
-    </style>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-      <div id="raw-loader">
-        <img src="/logo_64.png" />
-        <div id="raw-text">loading...</div>
+    }
+
+    ::-webkit-scrollbar {
+      width: 8px;
+      height: 8px;
+    }
+
+    ::-webkit-scrollbar {
+      width: 8px;
+      height: 8px;
+    }
+
+    ::-webkit-scrollbar-corner {
+      background: none;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      border-radius: 4px;
+      background: #858585;
+    }
+
+    ::-webkit-scrollbar-track {
+      opacity: 0;
+    }
+
+    *:focus {
+      box-shadow: none !important;
+    }
+  </style>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root">
+    <div id="raw-loader">
+      <div class="firepit firepit-animate">
+        <div class="firepit-fire">
+          <div class="firepit-flame"></div>
+          <div class="firepit-flame"></div>
+          <div class="firepit-flame"></div>
+          <div class="firepit-flame"></div>
+        </div>
       </div>
+      <div id="raw-text">loading...</div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
