--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
   <meta name="coinzilla" content="920f45ad0d38211bf8d422e271a20d5a" />
   <meta name="description"
     content="Watch Ethereum burn ETH in real-time, per block, as an ultra-sound money, creating a sense of deflation. Due to the new protocol changes, EIP-1559." />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_512.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Watch The Burn: EIP-1559 Real-Time Visualization</title>
   <style>
