Increase retry to 10 incase server is restarting

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,7 @@
     content="Watch Ethereum burn ETH in real-time, per block, as an ultra-sound money, creating a sense of deflation. Due to the new protocol changes, EIP-1559." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_512.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Watch The Burn: EIP-1559 Real-Time Visualization</title>
+  <title>Watch The Burn: EIP-1559 Real-Time ETH Burn Visualization for Ethereum</title>
   <style>
     :root {
       --orange: rgb(255, 106, 0);
