Make Light Mode Background a little grey

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -176,7 +176,7 @@
     }
 
     .chakra-ui-light {
-      background-color: white;
+      background-color: #fdfdfd;
       color: #333;
     }
   </style>
