Background Update to blueish

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -171,7 +171,7 @@
     }
 
     .chakra-ui-dark {
-      background-color: #121212;
+      background-color: #1D1E2B;
       color: white;
     }
 
