Fix iOS Gradient from SVG being removed in logo

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -191,14 +191,14 @@
   <div id="root">
     <div id="raw-loader">
       <svg height="150" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <ellipse cx="16" cy="21.766" rx="10.2342" ry="10.2342" fill="url(#paint0_linear)" />
-        <path d="M23.2367 0L8.7633 14.4987C4.76659 18.5023 4.76659 24.9936 8.7633 28.9972L23.2367 14.4986C27.2334 10.4949 27.2334 4.00366 23.2367 0Z" fill="url(#paint1_linear)" />
+        <ellipse cx="16" cy="21.766" rx="10.2342" ry="10.2342" fill="url(#paint_circle)" />
+        <path d="M23.2367 0L8.7633 14.4987C4.76659 18.5023 4.76659 24.9936 8.7633 28.9972L23.2367 14.4986C27.2334 10.4949 27.2334 4.00366 23.2367 0Z" fill="url(#paint_flame)" />
         <defs>
-          <linearGradient id="paint0_linear" x1="24.3797" y1="13.2922" x2="8.94395" y2="29.0511" gradientUnits="userSpaceOnUse">
+          <linearGradient id="paint_circle" x1="24.3797" y1="13.2922" x2="8.94395" y2="29.0511" gradientUnits="userSpaceOnUse">
             <stop stop-color="#FAB951" />
             <stop offset="1" stop-color="#FF5F52" />
           </linearGradient>
-          <linearGradient id="paint1_linear" x1="16" y1="0" x2="16" y2="28.9972" gradientUnits="userSpaceOnUse">
+          <linearGradient id="paint_flame" x1="16" y1="0" x2="16" y2="28.9972" gradientUnits="userSpaceOnUse">
             <stop stop-color="#C62828" />
             <stop offset="1" stop-color="#FF5F52" />
           </linearGradient>
