--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -186,6 +186,13 @@
     // To eliminate flashing a bit more.
     const storedColorMode = localStorage['chakra-ui-color-mode'] || (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
     document.body.classList.add(storedColorMode === 'dark' ? 'chakra-ui-dark' : 'chakra-ui-light');
+
+    // Clarity
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "8biyq6zmts");
   </script>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root">
