polishing the new layout a bit more - Add navigation detector - Add more about page - Change menu to iconbutton to have better hover xp - Make menu clickable for hyperlink not just text

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <meta name="theme-color" content="#1d1e2b" />
   <meta name="description"
     content="Watch Ethereum burn ETH in real-time, per block, as an ultra-sound money, creating a sense of deflation. Due to the new protocol changes, EIP-1559." />
