Improve the App Icon for mobile

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#1d1e2b" />
   <meta name="description"
     content="Watch Ethereum burn ETH in real-time, per block, as an ultra-sound money, creating a sense of deflation. Due to the new protocol changes, EIP-1559." />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_512.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/app-icon.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Watch The Burn: EIP-1559 Real-Time ETH Burn Visualization for Ethereum</title>
   <style>
